src/objects/Custom_Clinical_Note__c.object
<CustomObject>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Custom Clinical Notes</relationshipLabel>
        <relationshipName>Custom_Clinical_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Text__c</fullName>
        <label>Note Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Clinical Note</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Custom Clinical Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Clinical Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>